Fixed the sizing problem on mobile

--- a/time/styles.css
+++ b/time/styles.css
@@ -1,5 +1,5 @@
 .topmargin {
-	padding-top: 5%;
+	padding: 5%;
 }
 
 #localtimezone {
